--- a/app/src/main/res/layout/listview_feed.xml
+++ b/app/src/main/res/layout/listview_feed.xml
@@ -97,7 +97,7 @@
             android:stepSize="0.2"
             android:visibility="gone"
             app:layout_constraintStart_toEndOf="@+id/distance"
-            app:layout_constraintTop_toBottomOf="@+id/instructions" />
+            app:layout_constraintTop_toBottomOf="@+id/special_instructions" />
 
         <TextView
             android:id="@+id/distance"
@@ -112,10 +112,10 @@
             android:textAlignment="viewStart"
             android:textSize="12sp"
             app:layout_constraintStart_toEndOf="@+id/profile"
-            app:layout_constraintTop_toBottomOf="@+id/instructions" />
+            app:layout_constraintTop_toBottomOf="@+id/special_instructions" />
 
         <TextView
-            android:id="@+id/instructions"
+            android:id="@+id/special_instructions"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
