--- a/app/src/main/res/layout/summary.xml
+++ b/app/src/main/res/layout/summary.xml
@@ -9,6 +9,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <TextView
+            android:id="@+id/summary_special_instructions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:textSize="10sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/summary_drop_off" />
+
         <Button
             android:id="@+id/summary_cancel"
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
@@ -18,16 +28,17 @@
             android:layout_marginEnd="32dp"
             android:layout_marginTop="32dp"
             android:text="Cancel"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/summary_confirm"
-            app:layout_constraintTop_toBottomOf="@+id/summary_drop_off8" />
+            app:layout_constraintTop_toBottomOf="@+id/summary_drop_off9" />
 
         <TextView
             android:id="@+id/summary_drop_off7"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:text="Subtotal"
             android:textAlignment="textEnd"
             android:textColor="@android:color/black"
@@ -36,19 +47,16 @@
             app:layout_constraintTop_toBottomOf="@+id/view3" />
 
         <TextView
-            android:id="@+id/summary_drop_off8"
+            android:id="@+id/payment_subtotal"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginEnd="32dp"
-            android:layout_marginTop="8dp"
             android:text="$ 6.11"
             android:textAlignment="textEnd"
             android:textColor="@android:color/black"
             android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@+id/summary_drop_off9"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/summary_drop_off7"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintTop_toTopOf="@+id/summary_drop_off7" />
 
         <TextView
             android:id="@+id/summary_drop_off5"
@@ -56,7 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="8dp"
-            android:text="Including taxes and fees"
+            android:text="Taxes and fees"
             android:textAlignment="textEnd"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +82,7 @@
             app:layout_constraintTop_toBottomOf="@+id/summary_drop_off7" />
 
         <TextView
-            android:id="@+id/summary_drop_off6"
+            android:id="@+id/payment_fees"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
@@ -91,7 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="24dp"
-            android:text="Errand Cost"
+            android:text="Errand Price"
             android:textAlignment="textEnd"
             android:textColor="@android:color/black"
             android:textSize="14sp"
@@ -126,14 +134,12 @@
             android:id="@+id/view2"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginEnd="48dp"
-            android:layout_marginStart="48dp"
             android:layout_marginTop="16dp"
             android:background="@android:color/darker_gray"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/summary_errand" />
+            app:layout_constraintTop_toBottomOf="@+id/summary_special_instructions" />
 
         <View
             android:id="@+id/view"
@@ -154,9 +160,9 @@
             style="@xml/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="48dp"
             android:layout_marginStart="48dp"
-            android:layout_marginTop="16dp"
             android:background="@android:color/darker_gray"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -257,10 +263,10 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
             android:layout_marginTop="32dp"
-            android:layout_marginEnd="32dp"
             android:text="REQUEST ERRAND"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/summary_drop_off8" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/summary_drop_off9" />
     </android.support.constraint.ConstraintLayout>
 </LinearLayout>
