--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -21,13 +21,13 @@
             tools:context="com.errand.team5.errand.Task">
 
             <TextView
-                android:id="@+id/textView14"
+                android:id="@+id/task_distance_away"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="32dp"
                 android:fontFamily="@font/roboto_light"
                 android:textAlignment="center"
-                android:textSize="10dp"
+                android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/task_drop_off_button"
                 tools:text="2.4 miles away" />
@@ -41,7 +41,7 @@
                 android:fontFamily="@font/roboto_light"
                 android:text="Posted 24 mins ago"
                 android:textAlignment="center"
-                android:textSize="10dp"
+                android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/task_profile_image"
                 app:layout_constraintStart_toEndOf="@+id/task_profile_image"
                 app:layout_constraintTop_toBottomOf="@+id/task_title" />
@@ -112,7 +112,7 @@
                 android:fontFamily="@font/roboto_light"
                 android:text="Updates"
                 android:textAlignment="center"
-                android:textSize="10sp"
+                android:textSize="12sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/view5" />
@@ -186,11 +186,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:fontFamily="@font/roboto_light"
                 android:text="Estimated Completion Time"
                 android:textAlignment="center"
-                android:textSize="10dp"
+                android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/task_description" />
 
@@ -216,7 +216,7 @@
                 android:fontFamily="@font/roboto_light"
                 android:text="Description"
                 android:textAlignment="center"
-                android:textSize="10dp"
+                android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/task_profile_image" />
 
@@ -244,7 +244,7 @@
                 android:fontFamily="@font/roboto_light"
                 android:text="Drop Off Addess"
                 android:textAlignment="center"
-                android:textSize="10dp"
+                android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/view4" />
 
@@ -258,7 +258,7 @@
                 android:fontFamily="@font/roboto_light"
                 android:text="Special Instructions"
                 android:textAlignment="center"
-                android:textSize="10dp"
+                android:textSize="12sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/task_drop_off_button" />
@@ -286,11 +286,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="32dp"
                 android:layout_marginTop="32dp"
+                android:text="Request Errand"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/task_completion_time6"
-                tools:text="Request Errand" />
+                app:layout_constraintTop_toBottomOf="@+id/task_completion_time6" />
 
 
         </android.support.constraint.ConstraintLayout>
