--- a/app/src/main/res/layout/listview_feed.xml
+++ b/app/src/main/res/layout/listview_feed.xml
@@ -23,7 +23,9 @@
             app:layout_constraintBottom_toBottomOf="@+id/distance"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            app:srcCompat="@mipmap/ic_launcher_round"
+
+            />
 
         <TextView
             android:id="@+id/title"
