--- a/app/src/main/res/layout/listview_feed.xml
+++ b/app/src/main/res/layout/listview_feed.xml
@@ -14,13 +14,11 @@
 
         <ImageView
             android:id="@+id/profile"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginBottom="8dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
-            app:layout_constraintBottom_toBottomOf="@+id/distance"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@mipmap/ic_launcher_round"
@@ -54,7 +52,7 @@
             android:textAlignment="textEnd"
             android:textSize="12sp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/price" />
+            app:layout_constraintTop_toBottomOf="@+id/special_instructions" />
 
         <TextView
             android:id="@+id/listview_timestamp"
@@ -73,18 +71,18 @@
 
         <TextView
             android:id="@+id/price"
-            android:layout_width="30dp"
-            android:layout_height="32dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="8dp"
             android:layout_weight="9"
             android:fontFamily="sans-serif"
             android:text="60"
             android:textAlignment="textStart"
             android:textColor="@android:color/black"
             android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="@+id/special_instructions"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/listview_timestamp" />
+            app:layout_constraintTop_toTopOf="@+id/special_instructions" />
 
         <RatingBar
             android:id="@+id/creatorRating"
@@ -127,7 +125,8 @@
             android:fontFamily="@font/roboto_light"
             android:maxLines="2"
             android:text="A description of the task to doA description of the task toA description of the task to doA description of the task to doA description of the task to do do"
-            android:textSize="12sp"
+            android:textColor="@android:color/black"
+            android:textSize="14sp"
             app:layout_constraintEnd_toStartOf="@+id/textView3"
             app:layout_constraintStart_toEndOf="@+id/profile"
             app:layout_constraintTop_toBottomOf="@+id/title" />
