--- a/app/src/main/res/layout/listview_feed.xml
+++ b/app/src/main/res/layout/listview_feed.xml
@@ -59,7 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:fontFamily="sans-serif"
             android:paddingLeft="10dp"
@@ -135,12 +135,11 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:fontFamily="@font/roboto_light"
             android:text="$"
             android:textColor="@android:color/black"
             app:layout_constraintEnd_toStartOf="@+id/price"
-            app:layout_constraintTop_toBottomOf="@+id/listview_timestamp" />
+            app:layout_constraintTop_toTopOf="@+id/price" />
     </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
