--- a/app/src/main/res/layout/listview_feed.xml
+++ b/app/src/main/res/layout/listview_feed.xml
@@ -138,6 +138,7 @@
             android:fontFamily="@font/roboto_light"
             android:text="$"
             android:textColor="@android:color/black"
+            android:visibility="gone"
             app:layout_constraintEnd_toStartOf="@+id/price"
             app:layout_constraintTop_toTopOf="@+id/price" />
     </android.support.constraint.ConstraintLayout>
