--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -287,6 +287,7 @@
                 android:layout_marginBottom="32dp"
                 android:layout_marginTop="32dp"
                 android:text="Request Errand"
+                android:onClick="onRequest"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
