--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -63,6 +63,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/profile"
         app:layout_constraintTop_toBottomOf="@id/message"
+        app:layout_constraintRight_toLeftOf="@id/button_decline"
         />
 
 
@@ -71,6 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="DISMISS"
+        android:layout_marginRight="8dp"
 
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
