--- a/app/src/main/res/layout/activity_edit_task.xml
+++ b/app/src/main/res/layout/activity_edit_task.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.errand.team5.errand.Task">
-
+    tools:context=".editTask">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -166,7 +165,7 @@
                 app:layout_constraintVertical_chainStyle="packed" />
 
 
-            <TextView
+            <EditText
                 android:id="@+id/task_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -220,7 +219,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/task_profile_image" />
 
-            <TextView
+            <EditText
                 android:id="@+id/task_description"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -263,7 +262,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/task_drop_off_button" />
 
-            <TextView
+            <EditText
                 android:id="@+id/task_special_instructions"
                 android:layout_width="0dp"
                 android:layout_height="18dp"
@@ -280,28 +279,16 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
             <Button
-                android:id="@+id/editTaskButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Edit"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.929"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/task_completion_time6"
-                app:layout_constraintVertical_bias="0.319" />
-
-            <Button
                 android:id="@+id/button_request"
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="32dp"
                 android:layout_marginTop="32dp"
-                android:text="Request Errand"
+                android:text="Update"
+                android:onClick="onUpdateTask"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.417"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/task_completion_time6"
                 app:layout_constraintVertical_bias="1.0" />
@@ -309,6 +296,5 @@
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
-
 
 </android.support.constraint.ConstraintLayout>
