--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,4 +6,11 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_notis"
+        android:icon="@drawable/ic_notifications_white_24dp"
+        android:title="Notifications"
+        app:showAsAction="always"
+        />
 </menu>
